...

    <string name="QUIZ_URL" translatable="false"><![CDATA[http://quizzical.canadacentral.cloudapp.azure.com/quiz?classCode=%d&quizCode=%d]]></string>
    <string name="QUIZ_NUM_SCORE" translatable="false">quiz%sscore</string>
    <string name="TYPE" translatable="false">type=</string>

    <string name="app_name" translatable="false">quizzical</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>

    <string name="curr_login_user" translatable="false">currLoginUser</string>
    <string name="LOGGED" translatable="false">logged</string>

    <string name="Continue_text">Continue</string>

    <!--    set an untranslatable version of username for server communication-->
    <string name="USER_INFO" translatable="false">userInfo</string>
...
    <string name="INSTRUCTOR_UID" translatable="false">instructorUID</string>

    <string name="CREATE_CLASS" translatable="false">createClass</string>
    <string name="JOIN_CLASS" translatable="false">joinClass</string>
    <string name="CLASS_CODE" translatable="false">classCode</string>
    <string name="CLASS_NAME" translatable="false">className</string>
    <string name="CLASS_LIST" translatable="false">classList</string>
    <string name="CLASS_INFO" translatable="false">classInfo</string>
    <string name="CURR_CLASS_CODE" translatable="false">currClassCode</string>
    <string name="CURR_CLASS" translatable="false">currClass</string>

    <string name="QUIZ" translatable="false">quiz</string>
    <string name="QUIZ_CODE" translatable="false">quizCode</string>
...
    <!--    used for home activity-->
    <string name="UI_quizzes">Quizzes</string>
    <string name="UI_class_statistics">Class Statistics</string>
    <string name="UI_leader_board">LeaderBoard</string>
    <string name="UI_profile">Profile</string>

    <string name="UI_example_course_code" translatable="false">E.g. 123456</string>
    <string name="UI_invalid_class_code_msg">Invalid class code</string>
    <string name="UI_enter_class_code_msg">Please enter your class code</string>
    <string name="UI_class_joined_msg">You have joined the class</string>
    <string name="UI_class_joined_already_msg">You have already joined the class</string>

    <string name="UI_creating_class_msg">Creating class</string>
    <string name="UI_select_course_category_msg">Please select a course category</string>
    <string name="UI_select_grade_level_msg">Please select your class grade level</string>
    <string name="UI_enter_class_name_msg">Please enter class name</string>
    <string name="UI_example_class_name" translatable="false">E.g. Grade_10_math_class_A</string>
    <string name="UI_class_name_invalid_msg">Class name invalid</string>
    <string name="UI_create_class_success_title">You just created a new class</string>
    <string name="UI_create_class_success_msg">Your new class code is %d. You will also get an email containing the code. Please share it with your students.</string>

    <string name="UI_warning">Warning</string>
    <string name="UI_teacher_delete_course">Do you want to delete this course for everyone?</string>
    <string name="UI_student_delete_course">Do you want to quit this course?</string>

    <!--    used in quiz fragment-->
    <string name="UI_no_data">No data.</string>
    <string name="go_to_quiz">Go to Quiz</string>
    <string name="UI_default_module_text">module 1</string>
    <string name="UI_wrong_questions">Wrong Questions</string>
...
    <!--    used in quiz activity-->
    <string name="UI_error_generating_quiz_page_msg">An error occurred, press next to continue</string>
    <string name="UI_question">Question</string>
    <string name="UI_next">Next Question</string>
    <string name="UI_error_loading_pic_msg">Error loading picture</string>
    <string name="UI_quiz_pic_msg">You may need to scroll down to see the picture</string>
    <string name="UI_submit">Submit</string>
    <string name="UI_finish">Finish</string>
    <string name="UI_no_answer_response_msg">Please answer the question before submission.</string>

    <string name="UI_in_quiz_correct_msg">You are correct. You got %d/%d correct.</string>
    <string name="UI_in_quiz_wrong_msg">You are wrong. You got %d/%d correct.</string>

...
