...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/class_switch_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
...
            android:id="@+id/class_scroll_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_class_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CREATE_CLASS"
                app:srcCompat="@drawable/ic_baseline_add_24" />

        </LinearLayout>
...
